services/base/silverbullet/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: silverbullet
  namespace: silverbullet
spec:
  type: ClusterIP
  selector:
    app: silverbullet
  ports:
    - port: 3000
      targetPort: 3000
